[package]
name = "P1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "p1"
path = "src/main.rs"

[lib]
name = "p1"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2.15"
glfw = "0.51.0"
gl = "0.14.0"
sdl2 = "0.35.2"

[dependencies.uuid]
version = "1.3.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
